# Sloptimiser

./: CMakeLists.txt
sloptimiser/: CMakeLists.txt
sloptimiser/include/sloptimiser/: linprog.h
sloptimiser/unittest/: CMakeLists.txt  testlinprog.cpp
src/: main.cpp
